--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,9 @@ html {
   
   /* color: white; */
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 
